--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,13 @@
   --color-headings: #1b0760;
   --color-body: #918ca4;
 }
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 /* Typography */
 
 html {
@@ -162,6 +169,82 @@ a {
   height: 64px;
   border-radius: 100%;
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* buttons */
+.btn {
+  border-radius: 40px;
+  border: 0;
+  cursor: pointer;
+  font-weight: 600;
+  margin: 1rem 0;
+  padding: 2rem 3rem;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+/* button fills */
+.btn--primary {
+  background: var(--color-primary);
+  color: white;
+}
+
+.btn--primary:hover {
+  background: #3a8ffd;
+}
+
+.btn--secondary {
+  background: var(--color-secondary);
+  color: #fff;
+}
+
+.btn--secondary:hover {
+  background: #00c8eb;
+  color: #fff;
+}
+
+.btn--accent {
+  background: var(--color-accent);
+  color: #fff;
+}
+
+.btn--accent:hover {
+  background: #ec3000;
+}
+
+.btn--outline {
+  background: #fff;
+  color: var(--color-headings);
+  border: 2px solid var(--color-headings);
+}
+/* button displays */
+.btn__block {
+  display: flex;
+  width: 400px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 1024px) {
+  btn {
+    font-size: 1.5rem;
+  }
+}
+
+.btn--inline {
+  display: inline-flex;
+  padding: 2rem;
+  justify-items: center;
+  align-items: center;
+}
+
+/* button alignment */
+.btn__flex {
+  display: flex;
+  width: 100dvw;
   justify-content: center;
   align-items: center;
 }
