corrected domain-block in playgrounf.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -205,7 +205,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4dvw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -313,6 +313,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -764,6 +765,7 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 6rem);
