--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,13 +16,19 @@
 }
 
 ::selection {
-  background-color: #fff;
+  background: var(--color-primary);
+  color: #fff;
 }
 
 /* Typography */
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+img {
+  width: 100%;
 }
 
 body {
@@ -50,6 +56,8 @@ h2 {
 
 h3 {
   font-size: 3rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 @media screen and (min-width: 1024px) {
@@ -202,6 +210,7 @@ a {
   border-radius: 40px;
   border: 0;
   cursor: pointer;
+  font-size: 1.8rem;
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
@@ -438,7 +447,6 @@ a {
 
   .plan__description {
     font-size: 1.7rem;
-    display: block;
   }
 }
 
@@ -487,6 +495,8 @@ a {
 .quote__organization {
   color: var(--color-headings);
   opacity: 40%;
+  font-size: 1.5rem;
+  font-style: normal;
 }
 
 .quote__line {
@@ -530,8 +540,14 @@ a {
   padding: 3rem;
 }
 
+.testimonial .quote {
+  margin: 2rem 0;
+  font-size: 110%;
+}
+
 .testimonial__image {
   position: relative;
+  margin: 0 3rem;
 }
 
 .testimonial__image > img {
@@ -544,6 +560,7 @@ a {
   right: -32px;
 }
 
+/* TODO: Review this Section*/
 @media screen and (min-width: 768) {
   .testimonial .quote,
   .testimonial .quote__author {
@@ -654,12 +671,12 @@ a {
 }
 
 .block--skewed-right {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
   padding-bottom: calc(var(--padding-vertical) + 6rem);
 }
 
 .block--skewed-left {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
   padding-bottom: calc(var(--padding-vertical) + 6rem);
 }
 
@@ -762,6 +779,8 @@ a {
 .block-domain .input-group {
   box-shadow: 0 0 30px 20px #e6ebee;
   border: 0;
+  margin: 4rem auto;
+  max-width: 670px;
 }
 
 .block-domain__prices {
@@ -773,7 +792,7 @@ a {
   font-weight: 600;
   max-width: 700px;
   justify-items: center;
-  margin: 2rem auto;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -815,7 +834,7 @@ a {
 /* Media Query for larger screens */
 @media screen and (min-width: 768px) {
   .feature {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
   }
 
   .feature:nth-of-type(even) {
