--- a/components/nav.html
+++ b/components/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav collapsible">
   <a href="/"><img class="nav__brand" src="images/logo.png" alt="" /></a>
   <svg class="icon icon--white nav__toggler">
-    <use xlink:href="images/sprite.svg#menu"></use>
+    <use href="images/sprite.svg#menu"></use>
   </svg>
   <ul class="list nav__list collapsible__content">
     <li class="nav__item"><a class="nav__anchor" href="#">Hosting</a></li>
